--- a/ui/src/app/components/shared/charts/heatmap/heatmap.component.html
+++ b/ui/src/app/components/shared/charts/heatmap/heatmap.component.html
@@ -4,3 +4,8 @@
 type="matrix"
 [options]="_options">
 </canvas>
+<div class="legend">
+    <div class="max">{{maxValue}}</div>
+    <div class="gradient"></div>
+    <div class="min">0</div>
+</div>
