--- a/ui/src/app/components/shared/charts/heatmap/heatmap.component.scss
+++ b/ui/src/app/components/shared/charts/heatmap/heatmap.component.scss
@@ -1,7 +1,31 @@
 :host {
     position: absolute;
     left: 0;
-    right: 0;
+    right: 70px;
     top: 0;
     bottom: 0;
+
+    .legend {
+        position: absolute;
+        right: -70px;
+        top: 50px;
+        bottom: 15px;
+        display: flex;
+        color: #84BCB9;
+        font-size: 24px;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
+
+        .gradient{
+            flex: auto;
+            width: 10px;
+            background: linear-gradient(
+                            180deg, #84BCB9 0%, 
+                            #171D1E 100%
+                      );
+
+        }
+    }
 }
