--- a/ui/src/app/components/shared/header/header.component.html
+++ b/ui/src/app/components/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="menu">
     <div class="bar" (click)="state.toggleNavbar()"><span></span><span></span><span></span></div>
 </div>
-<div class="search">
+<div class="search" *ngIf="false">
     <input type="text" />
     <fa-icon [icon]="faMagnifyingGlass"></fa-icon>
 </div>
